# zsasa-benchmarks

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
config/: datasets.toml.example  tool-versions.toml
docs/: batch-human-rerun-log.md  batch-rerun-log.md  batch-rerun-plan.md  benchmark-policy.md  database.md  existing-assets.md  figure-inventory.md  migration-plan.md  single-file-rerun-log.md  single-file-subset-plan.md  trajectory-rerun-log.md  trajectory-rerun-plan.md  trajectory-validation-rerun-log.md  validation-rerun-log.md  zsasa-only-validation-refresh.md
manifests/: batch-ecoli.toml  batch-human.toml  single-file-sample.toml  trajectory.toml  validation-ecoli-smoke.toml  validation-ecoli.toml  validation-md-5wvo.toml
schemas/: benchmark.sql
scripts/: check_scaffold.py  check_tools.py  db_common.py  export_single_file_subset_summary.py  export_summary_tables.py  export_validation_summary.py  import_full_rerun.py  import_validation_csv.py  init_db.py  plot_batch_figures.py  plot_figures.py  plot_md_figures.py  plot_overview_figures.py  plot_single_file_figures.py  plot_validation_figures.py  prepare_single_file_structures.py  refresh_validation.py  refresh_validation_md.py  report_existing_assets.py  run_batch.py  run_remaining_benchmarks.py  run_single_file.py  run_single_file_subset.py  run_trajectory.py  run_trajectory_validation.py  run_validation.py  setup_external_tools.py  smoke_db.py
tests/: test_benchlib_commands.py  test_benchlib_manifest.py  test_benchlib_paths.py  test_benchlib_preprocess.py  test_benchlib_tools.py  (+16 more)
(+46 files in other folders)
