[project]
name = "zsasa-benchmarks"
version = "0.1.0"
description = "Benchmark harness for release-fixed zsasa manuscript evidence"
requires-python = ">=3.12"
dependencies = [
  "duckdb==1.5.3",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]
