[project]
name = "zsasa-benchmarks"
version = "0.1.0"
description = "Benchmark harness for release-fixed zsasa manuscript evidence"
requires-python = ">=3.12"
dependencies = [
  "duckdb==1.5.3",
  "mdanalysis==2.10.0",
  "mdsasa-bolt==4.0.1",
  "mdtraj==1.11.1.post1",
  "pytest>=8.0",
  "zsasa==0.6.0",
]

[tool.ruff]
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
zsasa = { git = "https://github.com/N283T/zsasa", subdirectory = "python", rev = "v0.6.0" }
